[package]
name = "qruff"
version = "0.1.0"
authors = ["Jie Yang <jie.yang@nanchao.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cc = "1.0"
cfg-if = "0.1"
cfile = "0.5"
cstr = "0.1"
failure = "0.1"
foreign-types = "0.4"
foreign-types-shared = "0.3.0"
futures = "0.3.4"
lazy_static = "1.3"
libc = "0.2"
log = "0.4"
platforms = "0.2"
pretty_env_logger = "0.3"
proc-macro-hack = "0.5"
qjs = { version = "0.1", git = "https://github.com/topelinux/rust-quickjs.git", rev = "2648e7e" }
structopt = "0.3"
tempfile = "3.1"
tokio = {version = "0.2.15", features = ["full"] }
dns-lookup = "1.0.2"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.52"
tokio-modbus = "*"
tokio-serial = "4.3.3-tokio-0.2.0-alpha.6"
